# AgentsBoard

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.deb  Dockerfile.debian  Dockerfile.desktop  Dockerfile.qt  Package.resolved  Package.swift  README.md  build.sh  docker-compose.yml  index.html  markdown-page.html  sitemap.xml
.github/workflows/: ci.yml  release.yml
Casks/: agentsboard.rb
Sources/App/: AgentsBoardApp.swift  AgentsBoardCommands.swift  BrewUpdateManager.swift  CompositionRoot.swift  EmbeddedServerController.swift  KeyEventHandler.swift  SessionPersistence.swift  UpdateSheet.swift
Sources/App/Resources/: AppIcon.icns
Sources/CLI/: AgentsCtl.swift
Sources/Core/: PlatformCompat.swift
Sources/Core/Activity/: ActivityLogger.swift
Sources/Core/Agent/: AgentModels.swift  AgentProtocols.swift  AgentSession.swift  AgentStateMachine.swift  ProviderRegistry.swift
Sources/Core/Commands/: CommandRegistry.swift  FuzzyMatcher.swift
Sources/Core/Config/: ConfigManager.swift  ConfigModels.swift  ConfigProtocols.swift  YAMLParser.swift
Sources/Core/Context/: ContextBridge.swift
Sources/Core/Control/: ControlServer.swift
Sources/Core/CostTracking/: CostEngine.swift  CostProtocols.swift
Sources/Core/Fleet/: FleetManager.swift  FleetProtocols.swift
Sources/Core/Hooks/: HookProtocols.swift  HookServer.swift
Sources/Core/Keybindings/: KeyBinding.swift  KeybindingManager.swift
Sources/Core/MCP/: MCPProtocols.swift  MCPServer.swift
Sources/Core/Notifications/: NotificationManager.swift
Sources/Core/Orchestration/: SessionRemixer.swift  TaskRouter.swift  VerificationChain.swift
Sources/Core/Persistence/: DatabaseManager.swift  PersistenceProtocols.swift
Sources/Core/Project/: ProjectManager.swift  ProjectProtocols.swift
Sources/Core/Recording/: RecordingEngine.swift  RecordingProtocols.swift
Sources/Core/Rendering/: GlyphAtlas.swift  MetalRenderer.swift  RenderingProtocols.swift  Shaders.metal
Sources/Core/Terminal/: PTYMultiplexer.swift  PTYProcess.swift  ShellPathEscaper.swift  TerminalGrid.swift  TerminalProtocols.swift  TerminalSession.swift  VTParser.swift
Sources/Core/Theme/: ThemeEngine.swift
Sources/CoreFFI/: CTypes.swift  CoreFFI.swift  FFIAdapters.swift
Sources/CoreFFI/include/: agentsboard.h
Sources/Server/: APIServer.swift  ServerCompositionRoot.swift  ServerMain.swift
Sources/Server/Middleware/: CORSMiddleware.swift  LocalhostGuard.swift
Sources/Server/Routes/: ActivityRoutes.swift  ConfigRoutes.swift  CostRoutes.swift  FleetRoutes.swift  ResponseHelpers.swift  SessionRoutes.swift  TerminalRoutes.swift
Sources/Server/WebSocket/: ActivityEventAdapter.swift  CostEventAdapter.swift  EventBroker.swift  EventTypes.swift  FleetEventAdapter.swift
Sources/UI/: L10n.swift  RootView.swift
Sources/UI/ActivityLog/: ActivityLogView.swift
Sources/UI/CommandPalette/: CommandPaletteView.swift
Sources/UI/DiffReview/: DiffReviewView.swift
Sources/UI/DragDrop/: DragDropView.swift
Sources/UI/Editor/: EditorView.swift
Sources/UI/Layout/: Layouts.swift  (+3 more)
Tests/CoreTests/: ActivityTests.swift  CommandTests.swift  ConfigTests.swift  ContextTests.swift  CostTests.swift  FleetTests.swift  KeybindingTests.swift  MCPTests.swift  OrchestrationTests.swift  PerformanceBenchmarks.swift  ProjectTests.swift  ProtocolTests.swift  RecordingTests.swift  RenderingTests.swift  TerminalTests.swift  TestHelpers.swift
Tests/E2ETests/: AgentsBoardE2ETests.swift
Tests/ServerTests/: ServerTests.swift
Tests/UITests/: RootViewTests.swift
assets/css/: styles.f9f0e2cd.css
assets/js/: 0b1ac180.59dda304.js  0dffb83e.f59ec124.js  1351815c.94d47d09.js  1df93b7f.62cc09a5.js  3370e755.fb66cdf7.js  34b00382.df092e7d.js  39134e2d.11ca839b.js  393be207.b53ee4b8.js  3b8c55ea.bc16cfdc.js  3eced7f0.12d61cdf.js  4201059b.ff822e80.js  4d54d076.a497dbd2.js  5d427568.e35c4370.js  5f1ccfe5.1ad6fa3e.js  632ea9c5.a33b8196.js  6f27b7a8.ec57c3cc.js  7a6b9a0b.c0cc4c1a.js  8b30f8fd.d016952d.js  925b0459.9851f60f.js  9fff8f5f.978eeb6c.js  a0a9499e.e01146d6.js  a9c100d3.65d28fe8.js  b41aed0e.e2716d84.js  b473cad3.372625dd.js  c19a4389.2d3cf7cd.js  d4c933dd.12d3e0e0.js  d589d3a7.9c078a00.js  e3e29971.e002d706.js  f2eee6bc.0ac221f9.js  fa6f0825.fa045588.js  ffa48f6c.27e45d4a.js  main.96cd2336.js  runtime~main.34a372b8.js
docs/: API.md  CROSS_PLATFORM.md  MARKET_RESEARCH.md  PERFORMANCE_REPORT.md  ROADMAP.md  contributing.html  getting-started.html  installation.html  roadmap.html
docs/api/: agent-protocols.html  core-protocols.html  fleet-protocols.html  mcp-tools.html
docs/architecture/: composition-root.html  module-structure.html  overview.html  solid-principles.html
docs/cli/: agentsctl.html
docs/core/: agent-system.html  config-system.html  context-bridge.html  cost-tracking.html  fleet-management.html  mcp-server.html  orchestration.html  recording.html  terminal-engine.html
docs/ui/: command-palette.html  diff-review.html  editor.html  file-explorer.html  mermaid-renderer.html  theme-engine.html
qt/: CMakeLists.txt  QT_FEATURES_TODO.md
qt/packaging/linux/: agentsboard.desktop
qt/packaging/windows/: installer.nsi
qt/qml/: ActivityLog.qml  CommandPalette.qml  CostDashboard.qml  DiffReview.qml  FleetOverview.qml  Main.qml  SessionCard.qml  SessionList.qml  Sidebar.qml  Terminal.qml
qt/src/: ActivityModel.cpp  ActivityModel.h  CoreBridge.cpp  CoreBridge.h  FleetModel.cpp  FleetModel.h  SessionModel.cpp  SessionModel.h  SystemTray.cpp  SystemTray.h  TerminalWidget.cpp  TerminalWidget.h  main.cpp
scripts/: benchmark.sh  build-dmg.sh  build-pkg.sh  bundle.sh  ci-test.sh  dev.sh  generate-e2e-project.sh  package-linux.sh  release.sh  run-desktop.sh  run-e2e.sh  setup-claude-kit.sh
tauri/: Cargo.toml  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: commands.rs  main.rs  server.rs  tray.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx
website/: docusaurus.config.ts  sidebars.ts
website/docs/: contributing.md  getting-started.md  installation.md  roadmap.md
(+72 files in other folders)
