[package]
name = "agentsboard-tauri"
version = "0.8.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
